== Changelog ==

= 2.2.1 - SEP XX 2023 =
- Fixed: Facebook Widget: PHP Notice: Undefined index: like_args, stream and force_wall.
- Fixed: Twitter Widget: PHP Notice: Undefined index: username.

= 2.2.0 - SEP 6 2023 =
- NEW: Metabox Settings Interface: https://docs.oceanwp.org/category/826-oceanwp-settings
- Added: Compatibility: PHP8.2+: Menu icons.
- Updated: Compatibility: WordPress version number.

= 2.1.8 - JUL 19 2023 =
- Updated: Freemius SDK 2.5.10 version.

= 2.1.7 - MAY 23 2023 =
- Added: Compatibility: SiteOrigin: Custom templates support.
- Added: Compatibility: PHP 8.2.6: Creation of dynamic property Ocean_Extra::$plugin_path, Ocean_Extra::$plugin_url and ButterBean::$post_id is deprecated.
- Tweak: JS Minify library replaced with JS Shrink for outputting custom JS from the Customizer.
- Fixed: Uncaught Error: Undefined constant "OCEANWP_CSS_DIR_URI".
- Removed: Redundant files for deprecated features such as Push Monkey notifications etc.

= 2.1.6 - APR 10 2023 =
- Updated: Widgets: MailChimp: widget rewritten, CURL method replaced with wp_remote_get.
- Fixed: OceanWP Panel: Customizer: Styling import doesn't function.
- Fixed: Fatal error: Uncaught Error: Class 'OceanWP_Customizer_Range_Control' not found in /plugins/ocean-extra/includes/preloader/customizer.php:224.

= 2.1.5 - APR 5 2023 =
- Updated: Freemius SDK to 2.5.6 version.
- Updated: Open Graph: Order of items returned.
- Fixed: Undefined array key "page" in /ocean-extra/includes/panel/theme-panel.php on line 45
- Fixed: Undefined array key "page" in /ocean-extra/includes/panel/demos.php on line 944

= 2.1.4 - FEB 22 2023 =
- Fixed: Shortcodes: [oceanwp_woo_free_shipping_left]: Shortcode displaying HTML when a user reaches the free shipping threshold.

= 2.1.3 - FEB 13 2023 =
- Fixed: Shortcodes: Search: Potential vulnerability patch: WPscan report #5932906 and Patchscan report #2023-24399.